--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Tyler Wynkoop
-logo: /assets/img/logo.jpg
+title: Husam Abdalkreem
+logo: /assets/img/logo.png
 description: My Resume
 show_downloads: false
-google_analytics: UA-218949144-1
 theme: jekyll-theme-minimal
